<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_centerVertical="true"
    android:background="@color/colorSurface">

    <LinearLayout
        android:id="@+id/outer_widget_plain_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:padding="36dp"
        android:background="@color/colorSurface">

        <FrameLayout
            android:id="@+id/preview_widget_plain_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/widget_bg">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/preview_widget_plain_steps"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="false"
                        android:text="12345 steps"
                        android:textAlignment="center"
                        android:textColor="@color/widgetPrimary"
                        android:textSize="22sp"
                        tools:ignore="HardcodedText" />
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/inverse_bg_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        app:thumbTint="@color/colorOnPrimary"
        app:trackTint="@color/colorPrimary"
        app:rippleColor="@color/colorAccent"
        android:paddingTop="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/widget_pref_invert_bg"
        android:textColor="@color/colorOnSurface"
        android:textAppearance="?attr/textAppearanceBodyLarge" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginVertical="30dp"
        android:background="@color/colorAccent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/dynamic_colors_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            app:thumbTint="@color/colorOnPrimary"
            app:trackTint="@color/colorPrimary"
            app:rippleColor="@color/colorAccent"
            app:thumbIcon="@drawable/ic_tick"
            app:thumbIconTint="@color/colorPrimary"
            android:layout_marginBottom="30dp"
            android:text="@string/widget_pref_dynamic_colors"
            android:textColor="@color/colorOnSurface"
            android:textAppearance="?attr/textAppearanceBodyLarge" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/label_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/widget_pref_text_scale"
            android:textColor="@color/colorOnSurface"
            android:textAppearance="?attr/textAppearanceBodyLarge" />

        <com.google.android.material.slider.Slider
            android:id="@+id/text_size_slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:contentDescription="@null"
            android:stepSize="5"
            android:value="100"
            android:valueFrom="65"
            android:valueTo="165"
            app:labelBehavior="gone"
            app:thumbColor="@color/colorAccent"
            app:tickColorActive="@color/colorPrimary"
            app:tickColorInactive="@color/colorAccent"
            app:trackColorActive="@color/colorAccent"
            app:trackColorInactive="@color/colorPrimary" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/label_opacity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/widget_pref_bg_opacity"
            android:textColor="@color/colorOnSurface"
            android:textAppearance="?attr/textAppearanceBodyLarge" />

        <com.google.android.material.slider.Slider
            android:id="@+id/opacity_slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:contentDescription="@null"
            android:value="100"
            android:valueFrom="0"
            android:valueTo="100"
            app:labelBehavior="gone"
            app:thumbColor="@color/colorAccent"
            app:trackColorActive="@color/colorAccent"
            app:trackColorInactive="@color/colorPrimary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/widget_pref_btn_save"
            android:textColor="@color/colorOnPrimary" />
    </LinearLayout>
</LinearLayout>
